using UnityEngine;

namespace Constants
{
    public static class AnimatorStates
    {
        public static readonly int Speed = Animator.StringToHash("Speed");
        public static readonly int Attack = Animator.StringToHash("Attack");
        public static readonly int Hit = Animator.StringToHash("Hit");
    }
}
